agrego fotos correctas y soluciono errores

--- a/index.html
+++ b/index.html
@@ -30,16 +30,14 @@
             </div>
             <div class="servicios">
                 <div class="servicio-item">
-                    <img src="/img/Untitled.png" alt="Mantenimiento">
-                    <p>MANTENIMIENTO</p>
+                    <img src="/img/img_deteccion.png" alt="Mantenimiento"><p>MANTENIMIENTO</p></img>
+
                 </div>
                 <div class="servicio-item">
-                    <img src="/img/Untitled2.png" alt="Detección de Problemas">
-                    <p>DETECCIÓN DE PROBLEMAS</p>
+                    <img src="/img/img_mantenimiento.png" alt="Detección de Problemas"><p>DETECCIÓN DE PROBLEMAS</p></img>
                 </div>
                 <div class="servicio-item">
-                    <img src="/img/Untitled3.png" alt="Modificaciones">
-                    <p>MODIFICACIONES</p>
+                    <img src="/img/img_modificaciones.png" alt="Modificaciones"><p>MODIFICACIONES</p></img>
                 </div>
             </div>
         </section>
