arreglo los div de servicio

--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
             </div>
             <div class="servicios">
                 <div class="servicio-item">
-                    <img src="/img/img_deteccion.png" alt="Mantenimiento"><p>MANTENIMIENTO</p></img>
-
+                    <img src="/img/img_deteccion.png" alt="Mantenimiento">
+                    <button class="servicio-boton">Mantenimiento</button>
                 </div>
                 <div class="servicio-item">
-                    <img src="/img/img_mantenimiento.png" alt="Detección de Problemas"><p>DETECCIÓN DE PROBLEMAS</p></img>
+                    <img src="/img/img_mantenimiento.png" alt="Detección de Problemas">
+                    <button class="servicio-boton">Detección de Problemas</button>
                 </div>
                 <div class="servicio-item">
-                    <img src="/img/img_modificaciones.png" alt="Modificaciones"><p>MODIFICACIONES</p></img>
+                    <img src="/img/img_modificaciones.png" alt="Modificaciones">
+                    <button class="servicio-boton">Modificaciones</button>
                 </div>
             </div>
         </section>
