--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#" class="active">SERVICIO</a></li>
+                <li><a href="#" >SERVICIO</a></li>
                 <li><a href="#nosotros">NOSOTROS</a></li>
-                <li><a href="#contacto">CONTACTO</a></li>
-                <li><a href="#iniciar-sesion">INICIAR SESIÓN</a></li>
+                <li><a href="#" onclick="mostrarFormulario('contacto')">CONTACTO</a></li>
+                <li><a href="#" onclick="mostrarFormulario('iniciar-sesion')">INICIAR SESIÓN</a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +24,6 @@
     <main>
         <section id="servicio">
             <div class="mapa">
-                <!-- Aquí se inserta el iframe con el mapa de Google -->
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53223.596913143876!2d-70.86533946251353!3d-33.51503883100833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662dd285b2c673f%3A0xfcd19ca5936c866d!2sMaip%C3%BA%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1723249800368!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <button>Solicitar Servicio</button>
             </div>
@@ -43,10 +42,52 @@
                 </div>
             </div>
         </section>
+
+        <!-- Formulario de Iniciar Sesión -->
+        <div id="iniciar-sesion" class="overlay">
+            <div class="popup">
+                <h2>Iniciar Sesión</h2>
+                <form>
+                    <label for="correo">Correo</label>
+                    <input type="email" id="correo" name="correo" required placeholder="ec-fix@gmail.com">
+                    <label for="contrasena">Contraseña</label>
+                    <input type="password" id="contrasena" name="contrasena" required placeholder="*********">
+                    <button type="submit">Ingresar</button> <br> <br>
+                    <a href="#" id="registro_link" >Crear Cuenta</a><br> <br>
+                    <a href="#" id="recuperar_password_link" >¿Olvidaste tu contraseña?</a>
+                </form>
+                <button class="close" onclick="cerrarFormulario()">X</button>
+            </div>
+        </div>
+
+        <!-- Formulario de Contacto -->
+        <div id="contacto" class="overlay">
+            <div class="popup">
+                <h2>Contáctanos</h2>
+                <form>
+                    <p>Nuestro correo de ayuda es: <strong>ec-fix@ayuda.cl</strong></p>
+                    <p>Llámanos a estos números:</p>
+                    <ul>
+                        <p>+569-1234 5678</p>
+                        <p>+569-1234 5678</p>
+                        <p>+569-1234 5678</p>
+                    </ul> <br>
+                    <label for="correo-contacto">Déjanos tu contacto aquí</label>
+                    <input type="email" id="correo-contacto" name="correo-contacto" required placeholder="ec-fix@gmail.com">
+                    <label for="mensaje">Explícanos tu problema aquí</label>
+                    <textarea id="mensaje" name="mensaje" required ></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
+                <button class="close" onclick="cerrarFormulario()">X</button>
+            </div>
+        </div>
+
     </main>
 
     <footer>
         <p>Todos los derechos reservados ©</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
