--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 </div>
             </div>
         </section>
+        <section id="nosotros">
+
+        </section>
 
         <!-- Formulario de Iniciar Sesión -->
         <div id="iniciar-sesion" class="overlay">
