agrego seccion de nosotros

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
             </div>
         </section>
         <section id="nosotros">
-
+            <h1>Nosotros</h1>
+            <ul>
+                <li>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ipsam qui illum culpa ab ea sequi quas minima quibusdam suscipit. Cumque assumenda consectetur veniam neque voluptates ducimus porro. Inventore, similique!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere aperiam et error eaque reiciendis eligendi eos libero iste molestias! Asperiores laudantium sapiente debitis distinctio quis sed ut delectus veritatis eos.</p>
+                </li>
+            </ul>
         </section>
 
         <!-- Formulario de Iniciar Sesión -->
