agrego mas paginas y arreglo css y html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         quis sed ut delectus veritatis eos.</p>
                 </li>
             </ul>
-            <img src="" alt="foto-mecanicos">
+            <img src="/img/img_nosotros.png" alt="foto-mecanicos" id="img_nosotros">
         </section>
 
         <!-- Formulario de Iniciar Sesión -->
