--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EC-FIX</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <header>
         <div class="logo">
-            <h1>EC-FIX LOGO</h1>
+            <h1>EC-FIX LOGO</h1> <!-- logo de ec-fix-->
         </div>
         <nav>
             <ul>
-                <li><a href="#">SERVICIO</a></li>
-                <li><a href="#nosotros">NOSOTROS</a></li>
-                <li><a href="#" onclick="mostrarFormulario('contacto')">CONTACTO</a></li>
+                <li><a href="#" id="btn-service">SERVICIO EXPRESS</a></li>
                 <li><a href="#" onclick="mostrarFormulario('iniciar-sesion')">INICIAR SESIÓN</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
         <section id="servicio">
             <div class="mapa">
@@ -31,6 +26,8 @@
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <button>Solicitar Servicio</button>
+                <section id="opciones_servicio"> <!-- agregar servicios especificos, servicios express-->
+                </section>
             </div>
             <div class="servicios">
                 <div class="servicio-item">
@@ -47,21 +44,8 @@
                 </div>
             </div>
         </section>
-        <section id="nosotros">
-            <h1>Nosotros</h1>
-            <ul>
-                <li>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ipsam qui illum culpa ab ea sequi
-                        quas minima quibusdam suscipit. Cumque assumenda consectetur veniam neque voluptates ducimus
-                        porro. Inventore, similique!</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere aperiam et error eaque
-                        reiciendis eligendi eos libero iste molestias! Asperiores laudantium sapiente debitis distinctio
-                        quis sed ut delectus veritatis eos.</p>
-                </li>
-            </ul>
-            <img src="/img/img_nosotros.png" alt="foto-mecanicos" id="img_nosotros">
+        <section id="nosotros"> <!-- crear seccion de nosotros-->
         </section>
-
         <!-- Formulario de Iniciar Sesión -->
         <div id="iniciar-sesion" class="overlay">
             <div class="popup">
@@ -78,7 +62,6 @@
                 </form>
             </div>
         </div>
-
         <!-- Formulario de Contacto -->
         <div id="contacto" class="overlay">
             <div class="popup">
@@ -102,10 +85,9 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer> <!-- agregar redes, y menu de contacto, etc...-->
         <p>Todos los derechos reservados ©</p>
     </footer>
-
     <script src="scripts.js"></script>
 </body>
 
