--- a/pages/inicio_user.html
+++ b/pages/inicio_user.html
@@ -110,6 +110,7 @@
         <a href="#" onclick="cerrarSesion()">Cerrar Sesión</a>
         <a href="#" onclick="mostrarFormulario('contacto')">Ayuda</a>
         <a href="#" onclick="mostrarFormulario('servicio')">Solicitar Servicio</a>
+        <a href="#" onclick="mostrarChat('chats')">Chats</a>
         <div class="sidebar-footer">
             <a href="#" onclick="mostrarFormulario('terminos-condiciones')">Términos y Condiciones</a>
         </div>
