--- a/pages/admin.html
+++ b/pages/admin.html
@@ -28,6 +28,6 @@
         </table>
     </div>
 
-    <script src="/scripts.js"></script>
+    <script src="/script_admin.js"></script>
 </body>
 </html>
