pongo opcion modificar y eliminar a mecanicos o usuarios

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             </div>
             <div class="servicios">
                 <div class="servicio-item">
-                    <img src="/img/img_deteccion.png" alt="Mantenimiento">
+                    <img src="/img/img_mantenimiento.png" alt="Mantenimiento">
                     <button class="servicio-boton">Mantenimiento</button>
                 </div>
                 <div class="servicio-item">
-                    <img src="/img/img_mantenimiento.png" alt="Detección de Problemas">
+                    <img src="/img/img_deteccion.png" alt="Detección de Problemas">
                     <button class="servicio-boton">Detección de Problemas</button>
                 </div>
                 <div class="servicio-item">
