--- a/pages/admin.html
+++ b/pages/admin.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Panel de Administración</title>
     <link rel="stylesheet" href="/styles_admin.css">
 </head>
+
 <body>
     <nav>
         <ul>
@@ -21,6 +23,7 @@
                     <th>Contraseña</th>
                     <th>Fecha de Creación</th>
                     <th>Rut</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody id="cuerpo-tabla-usuarios">
@@ -36,6 +39,7 @@
                     <th>Contraseña</th>
                     <th>Dirección</th>
                     <th>Especialidad</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody id="cuerpo-tabla-mecanicos">
@@ -45,4 +49,5 @@
 
     <script src="/script_admin.js"></script>
 </body>
+
 </html>
