arreglo errores esteticos

--- a/pages/inicio_user.html
+++ b/pages/inicio_user.html
@@ -24,9 +24,6 @@
     <main>
         <section id="servicio">
             <div class="mapa" id="map">
-                <button>Solicitar Servicio</button>
-                <section id="opciones_servicio"> <!-- agregar servicios especificos, servicios express-->
-                </section>
             </div>
             <div class="servicios">
                 <div class="servicio-item">
@@ -107,8 +104,8 @@
         <a href="#" class="closebtn" onclick="toggleSidebar()">&times;</a>
         <a href="#" onclick="cerrarSesion()">Cerrar Sesión</a>
         <a href="#" onclick="mostrarFormulario('contacto')">Ayuda</a>
-        <a href="#" onclick="mostrarFormulario('servicio')">Solicitar Servicio</a>
-        <a href="#" onclick="mostrarChat('chats')">Chats</a>
+        <a href="#">Solicitar Servicio</a>
+        <a href="#">Chats</a>
         <div class="sidebar-footer">
             <a href="#" onclick="mostrarFormulario('terminos-condiciones')">Términos y Condiciones</a>
         </div>
