agrego campos al panel del admin

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -20,6 +20,8 @@
             <thead>
                 <tr>
                     <th>Correo</th>
+                    <th>Nombre de Usuario</th> <!-- Nueva columna -->
+                    <th>Nombre</th> <!-- Nueva columna -->
                     <th>Contraseña</th>
                     <th>Fecha de Creación</th>
                     <th>Rut</th>
@@ -36,9 +38,12 @@
             <thead>
                 <tr>
                     <th>Correo</th>
+                    <th>Nombre de Usuario</th> <!-- Nueva columna -->
+                    <th>Nombre</th> <!-- Nueva columna -->
                     <th>Contraseña</th>
                     <th>Dirección</th>
                     <th>Especialidad</th>
+                    <th>Rut</th> <!-- Nueva columna -->
                     <th>Acciones</th>
                 </tr>
             </thead>
