agrego boton de salida admin

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -4,6 +4,7 @@
 <head>
     <title>Panel de Administración</title>
     <link rel="stylesheet" href="/styles_admin.css">
+    <script src="https://kit.fontawesome.com/192ba4ed31.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -12,6 +13,7 @@
             <li><a href="#" onclick="mostrarTabla('usuarios')">Usuarios</a></li>
             <li><a href="#" onclick="mostrarTabla('mecanicos')">Mecánicos</a></li>
             <li><a href="#">Servicios</a></li>
+            <li><a href="/index.html"><i class="fa-solid fa-right-from-bracket"></i></a></li>
         </ul>
     </nav>
 
