--- a/pages/inicio_user.html
+++ b/pages/inicio_user.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>EC-FIX LOGO</h1> <!-- logo de ec-fix-->
+            <h1>EC-FIX LOGO</h1>
         </div>
         <nav>
             <ul>
@@ -23,8 +23,8 @@
     </header>
     <main>
         <section id="servicio">
-            <div class="mapa" id="map">
-            </div>
+            <div class="mapa" id="map" height="450"></div>
+                
             <div class="servicios">
                 <div class="servicio-item">
                     <img src="/img/img_deteccion.png" alt="Mantenimiento">
@@ -40,25 +40,10 @@
                 </div>
             </div>
         </section>
-        <section id="nosotros"> <!-- crear seccion de nosotros-->
+        
+        <section id="nosotros">
         </section>
-        <!-- Formulario de Iniciar Sesión -->
-        <div id="iniciar-sesion" class="overlay">
-            <div class="popup">
-                <button class="close" onclick="cerrarFormulario()">X</button>
-                <h2>Iniciar Sesión</h2>
-                <form>
-                    <label for="correo">Correo</label>
-                    <input type="email" id="correo" name="correo" required placeholder="ec-fix@gmail.com">
-                    <label for="contrasena">Contraseña</label>
-                    <input type="password" id="contrasena" name="contrasena" required placeholder="*********">
-                    <button type="submit">Ingresar</button> <br> <br>
-                    <a href="#" id="registro_link" onclick="mostrarFormulario('crear-cuenta')">Crear Cuenta</a><br> <br>
-                    <a href="#" id="recuperar_password_link">¿Olvidaste tu contraseña?</a>
-                </form>
-            </div>
-        </div>
-        <!-- Formulario de Contacto -->
+
         <div id="contacto" class="overlay">
             <div class="popup">
                 <button class="close" onclick="cerrarFormulario()">X</button>
@@ -72,34 +57,18 @@
                         <p>+569-1234 5678</p>
                     </ul> <br>
                     <label for="correo-contacto">Déjanos tu contacto aquí</label>
-                    <input type="email" id="correo-contacto" name="correo-contacto" required
-                        placeholder="ec-fix@gmail.com">
+                    <input type="email" id="correo-contacto" name="correo-contacto" required placeholder="ec-fix@gmail.com">
                     <label for="mensaje">Explícanos tu problema aquí</label>
                     <textarea id="mensaje" name="mensaje" required></textarea>
                     <button type="submit">Enviar</button>
                 </form>
             </div>
         </div>
-        <!-- Formulario de Crear Cuenta -->
-        <div id="crear-cuenta" class="overlay">
-            <div class="popup">
-                <button class="close" onclick="cerrarFormulario()">X</button>
-                <h2>Crear Cuenta</h2>
-                <form id="form-crear-cuenta">
-                    <label for="nuevo-correo">Correo</label>
-                    <input type="email" id="nuevo-correo" name="nuevo-correo" required placeholder="ec-fix@gmail.com">
-                    <label for="nueva-contrasena">Contraseña</label>
-                    <input type="password" id="nueva-contrasena" name="nueva-contrasena" required
-                        placeholder="*********">
-                    <button type="submit">Crear Cuenta</button>
-                </form>
-            </div>
-        </div>
     </main>
-    <footer> <!-- agregar redes, y menu de contacto, etc...-->
+    <footer>
         <p>Todos los derechos reservados ©</p>
     </footer>
-    <!-- Sidebar -->
+
     <div id="sidebar" class="sidebar">
         <a href="#" class="closebtn" onclick="toggleSidebar()">&times;</a>
         <a href="#" onclick="cerrarSesion()">Cerrar Sesión</a>
@@ -110,7 +79,14 @@
             <a href="#" onclick="mostrarFormulario('terminos-condiciones')">Términos y Condiciones</a>
         </div>
     </div>
-    <script src="/scripts.js"></script>
-</body>
 
+    <!-- Lista de mecánicos (dropdown) -->
+    <div id="dropdown-lista-mecanicos" class="dropdown-content">
+        <ul id="mecanicos">
+            <!-- Lista de mecánicos se llenará dinámicamente -->
+        </ul>
+    </div>
+
+    <script src="/script_user.js"></script>
+</body>
 </html>
