hago mas ajustes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     </header>
     <main>
         <section id="servicio">
-            <div class="mapa" id="map" height="450">
+            <div class="mapa" id="map" style="position: relative;
+            overflow: hidden;
+            text-align: center;
+            width: 100%;
+            height: 650px;">
             </div>
             <div class="servicios">
                 <div class="servicio-item">
