pongo cada script en su lugar

--- a/index.html
+++ b/index.html
@@ -131,7 +131,13 @@
     <footer> <!-- agregar redes, y menu de contacto, etc...-->
         <p>Todos los derechos reservados ©</p>
     </footer>
-    <script src="/scripts.js"></script>
+    <script src="/scripts/accountCreation.js"></script>
+    <script src="/scripts/autocomplete.js"></script>
+    <script src="/scripts/checkboxMechanic.js"></script>
+    <script src="/scripts/forms.js"></script>
+    <script src="/scripts/listMechanics.js"></script>
+    <script src="/scripts/map.js"></script>
+    <script src="/scripts/session.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOdX-8mB6VSL-a_yTrcs8n3lrjFQmfpmQ&libraries=places"></script>
 </body>
