--- a/pages/admin.html
+++ b/pages/admin.html
@@ -54,7 +54,9 @@
         </table>
     </div>
 
-    <script src="/script_admin.js"></script>
+    <script src="/scripts/deleteUsers.js"></script>
+    <script src="/scripts/editUsers.js"></script>
+    <script src="/scripts/tableUsers.js"></script>
 </body>
 
 </html>
