--- a/pages/inicio_user.html
+++ b/pages/inicio_user.html
@@ -91,6 +91,10 @@
         </ul>
     </div>
 
-    <script src="/script_user.js"></script>
+    <script src="/scripts/forms.js"></script>
+    <script src="/scripts/listMechanics.js"></script>
+    <script src="/scripts/map.js"></script>
+    <script src="/scripts/sidebar.js"></script>
+    <script src="/scripts/session.js"></script>
 </body>
 </html>
