queda todos los mapas funcionales

--- a/pages/inicio_user.html
+++ b/pages/inicio_user.html
@@ -90,11 +90,12 @@
             <!-- Lista de mecánicos se llenará dinámicamente -->
         </ul>
     </div>
-
+    <script src="/scripts/autocomplete.js"></script>
     <script src="/scripts/forms.js"></script>
     <script src="/scripts/listMechanics.js"></script>
     <script src="/scripts/map.js"></script>
     <script src="/scripts/sidebar.js"></script>
     <script src="/scripts/session.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOdX-8mB6VSL-a_yTrcs8n3lrjFQmfpmQ&libraries=places"></script>
 </body>
 </html>
