agrego styles para el servicio

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>EC-FIX</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="stylesFooter.css">
+    <link rel="stylesheet" href="stylesServicio.css">
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css' rel='stylesheet' />
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js'></script>
 </head>
@@ -31,11 +32,10 @@
     </header>
     <main>
         <section id="servicio">
-            <div class="mapa" id="map" style="position: relative;
-            overflow: hidden;
-            text-align: center;
-            width: 100%;
-            height: 650px;">
+            <div id="button-service">
+                <button id="bottone1"><strong>Solicitar Servicio</strong></button>
+            </div>
+                <div class="mapa" id="map">
             </div>
             <div class="servicios">
                 <div class="servicio-item">
