--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EC-FIX</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="stylesFooter.css">
-    <link rel="stylesheet" href="stylesServicio.css">
+    <link rel="stylesheet" href="/styles/stylesFooter.css">
+    <link rel="stylesheet" href="/styles/stylesServicio.css">
+    <link rel="stylesheet" href="/styles/stylesHeader.css">
+    <link rel="stylesheet" href="/styles/stylesListMechanics.css">
+    <link rel="stylesheet" href="/styles/stylesNosotros.css">
+    <link rel="stylesheet" href="/styles/stylesForms.css">
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css' rel='stylesheet' />
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js'></script>
 </head>
