--- a/pages/admin.html
+++ b/pages/admin.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Panel de Administración</title>
-    <link rel="stylesheet" href="/styles_admin.css">
+    <link rel="stylesheet" href="/styles/styles_admin.css">
     <script src="https://kit.fontawesome.com/192ba4ed31.js" crossorigin="anonymous"></script>
 </head>
 
