meto boton dentro de div mapa

--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
     </header>
     <main>
         <section id="servicio">
-            <div id="button-service">
-                <button id="bottone1"><strong>Solicitar Servicio</strong></button>
-            </div>
-                <div class="mapa" id="map">
-            </div>
+                <div class="mapa" id="map"><div id="button-service">
+                    <button id="bottone1"><strong>Solicitar Servicio</strong></button>
+                </div></div>
             <div class="servicios">
                 <div class="servicio-item">
                     <img src="/img/img_mantenimiento.png" alt="Mantenimiento">
