modifico input de mantencion en forms
lo cambio de texto a un select options

--- a/index.html
+++ b/index.html
@@ -122,8 +122,12 @@
                             placeholder="Ej: Calle Principal 123">
                         <ul id="direccion-sugerencias"></ul>
                         <label for="especialidad-mecanico">Especialidad</label>
-                        <input type="text" id="especialidad-mecanico" name="especialidad-mecanico"
-                            placeholder="Mantencion">
+                        <select type="text" id="especialidad-mecanico" name="especialidad-mecanico">
+                            <option value="mantencion">Mantencion</option>
+                            <option value="servicioExpress">Servicio Express </option>
+                            <option value="DeteccionDeProblemas">Deteccion De Problemas</option>
+                            <option value="Modificaciones">Modificaciones</option>
+                        <select>
                     </div>
                     <button type="submit">Crear Cuenta</button>
                 </form>
