quito la barra lateral y agrego scroll,js

--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
             </li>
         </ul>
         <p>Todos los derechos reservados ©</p>
+        <div class="content">
+        </div>
 
     </footer>
     <script src="/scripts/accountCreation.js"></script>
@@ -174,6 +176,7 @@
     <script src="/scripts/listMechanics.js"></script>
     <script src="/scripts/map.js"></script>
     <script src="/scripts/session.js"></script>
+    <script src="/scripts/scrollDetect.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOdX-8mB6VSL-a_yTrcs8n3lrjFQmfpmQ&libraries=places"></script>
 </body>
