--- a/pages/inicio_user.html
+++ b/pages/inicio_user.html
@@ -30,10 +30,11 @@
     </header>
     <main>
         <section id="servicio">
-            <div id="button-service">
-                <button id="bottone1"><strong>Solicitar Servicio</strong></button>
+            <div class="mapa" id="map">
+                <div id="button-service">
+                    <button id="bottone1"><strong>Solicitar Servicio</strong></button>
+                </div>
             </div>
-            <div class="mapa" id="map"></div>
                 
             <div class="servicios">
                 <div class="servicio-item">
@@ -131,6 +132,7 @@
     <script src="/scripts/map.js"></script>
     <script src="/scripts/sidebar.js"></script>
     <script src="/scripts/session.js"></script>
+    <script src="/scripts/scrollDetect.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOdX-8mB6VSL-a_yTrcs8n3lrjFQmfpmQ&libraries=places"></script>
 </body>
 </html>
