agrego img en vez de logo
tambien hago los parametros para dispositivos moviles y cambios respectivos en los servicios

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>EC-FIX LOGO</h1> <!-- logo de ec-fix-->
+            <img src="" alt="">
         </div>
         <nav>
             <ul>
