--- a/pages/inicio_user.html
+++ b/pages/inicio_user.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>EC-FIX LOGO</h1>
+            <img src="" alt="">
         </div>
         <nav>
             <ul>
