--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
     <script src="/scripts/map.js"></script>
     <script src="/scripts/session.js"></script>
     <script src="/scripts/scrollDetect.js"></script>
+    <script src="/scripts/listMechanicsExpress.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOdX-8mB6VSL-a_yTrcs8n3lrjFQmfpmQ&libraries=places"></script>
 </body>
