agrego titulo de servicios

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
                     <button id="bottone1"><strong>Solicitar Servicio</strong></button>
                 </div>
             </div>
+            <section id="serviceTitle">
+                <h1>Nuestros Servicios</h1>
+            </section>
             <div class="servicios">
+                
                 <div class="servicio-item">
                     <img src="/img/img_mantenimiento.png" alt="Mantenimiento">
                     <button class="servicio-boton">Mantenimiento</button>
@@ -171,7 +175,7 @@
             </li>
         </ul>
         <p>Todos los derechos reservados ©</p>
-        <div class="content">
+        <div class="content" id="scrollDetect">
         </div>
 
     </footer>
@@ -179,7 +183,6 @@
     <script src="/scripts/autocomplete.js"></script>
     <script src="/scripts/checkboxMechanic.js"></script>
     <script src="/scripts/forms.js"></script>
-    <script src="/scripts/listMechanics.js"></script>
     <script src="/scripts/map.js"></script>
     <script src="/scripts/session.js"></script>
     <script src="/scripts/scrollDetect.js"></script>
